--- a/experiment desktop.css
+++ b/experiment desktop.css
@@ -1,10 +1,10 @@
-/* Stylesheet für Desktop */
 
 <!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+
 body, html {
   height: 100%;
   margin: 0;
@@ -69,6 +69,29 @@ visibility: hidden;
     opacity:0.95;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+   font-family: Arial, Helvetica, sans-serif;
+    height: 100%;
+}
+
+#myVideo {
+object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index:-1000;
+}
+
+.headcontent {
+
+}
+
 .hero-text {
   text-align: center;
  position: fixed;
@@ -78,16 +101,6 @@ visibility: hidden;
   z-index:99;
 }
 
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)), url("whiteangel.jpg");
-  height: 100%;
-   background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 44em; 
-}
-
 
 .centered {
   position: fixed;
@@ -95,9 +108,6 @@ visibility: hidden;
   left: 30px;
   z-index: 99;
 }
-
-
-
     
     .albumtitle {
         top: 50%;
@@ -109,9 +119,10 @@ visibility: hidden;
     
         h3 {
         font-size: 3.5vw;
-        color:#ebe9ff; 
+        color:#000000; 
      font-family:'New Times Roman';
     }
+    
     .button1 {
 	background-color:#ebe9ff;
 	border-radius:8px;
@@ -135,7 +146,7 @@ visibility: hidden;
 }
 .button1:hover {
 	background-color:#ebe9ff;
-		filter: opacity(60%);
+		filter: opacity(50%);
 }
 .button1:active {
 	position:relative;
@@ -166,17 +177,34 @@ visibility: hidden;
 }
 .button2:hover {
 	background-color:#ebe9ff;
-		filter: opacity(60%);
+		filter: opacity(50%);
 }
 .button2:active {
 	position:relative;
 	top:60px;
 }
 
+ img.ghibli {
+       width: 400px;
+    height: 400px;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    margin-top: -200px;
+    margin-left: -500px;
+  }
+  
 
-    
-    
- 
+.mobilebackground {
+display:hidden;
+}
+
+hr {
+margin-left:30px;
+margin-right:30px;
+color: #00ff00;
+
+}
   a.two {
   color: #b5ffb5;
   text-decoration:none;
@@ -192,26 +220,14 @@ a.two:hover {
   font-size: 1.5vw;
   font-weight: 100;
 }
- img.ghibli {
-       width: 400px;
-    height: 400px;
-    top: 50%;
-    left: 50%;
-    position: absolute;
-    margin-top: -200px;
-    margin-left: -500px;
-  }
-  
-   img.ghibli:hover {
-       width: 400px;
-    height: 400px;
-    top: 50%;
-    left: 50%;
-    position: absolute;
-    margin-top: -200px;
-    margin-left: -500px;
-  }
+    
+.spotify {
+display:none;
+}
 
+.applemusic {
+display:none;
+}
 
 .youtube {
 width:22px;
@@ -317,17 +333,12 @@ background-size: 20px;
  
   
   .streaming {
- top: 7px;
+ top: 3px;
   right: 270px;
 position: fixed;
 z-index: 99;
 }
 
-
-body, html {
-  height: 100%;
-  font-family: Arial, Helvetica, sans-serif;
-}
 
 .parallax-contact {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1)), url("lila.jpg");
@@ -355,7 +366,7 @@ margin-bottom: 0em !important;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1)), url("angelneon.jpg");
 margin-top:0em;
 margin-bottom: 0em !important;
-  height: 45em; 
+  height: 48em; 
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -432,6 +443,9 @@ height:267px;
 .thanksyou {
 margin-top:0em;
 }
+
+
+
 
 
 
