--- a/mobil.css
+++ b/mobil.css
@@ -46,13 +46,28 @@ visibility: hidden;
 }
 }
 
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("profil.jpg");
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+   font-family: Arial, Helvetica, sans-serif;
+    height: 100%;
+}
+
+#myVideo {
+object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index:-1000;
+}
+
+
+.headcontent {
+
 }
 
 .hero-text {
@@ -61,381 +76,292 @@ visibility: hidden;
   top: 90%;
   left: 0%;
   right: 0%;
+  margin-left:10px;
+  margin-right:10px;
 }
 
-a.four {
-  color: #b5ffb5;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 14px;
-  font-weight: lighter;
-   text-shadow: 2px 2px 5px #ec2ec4;
-}
-
-a.four:hover {
-  color: #e9ffe9;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 14px;
-  font-weight: lighter;
-   text-shadow: 2px 2px 5px #ec2ec4;
-}
-
-a.one {
-color:#00FF00;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 16px;
-font-weight: lighter;
-}
-
-a.one:hover {
-  color: #8e9cff;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 16px;
-  font-weight: lighter;
-   text-shadow: 2px 2px 5px red;
-}
-
-a.five {
-  color: #b5ffb5;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 12px;
-  font-weight: lighter;
-   text-shadow: 2px 2px 5px #ec2ec4;
-}
-
-a.five:hover {
-  color: #e9ffe9;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 12px;
-  font-weight: lighter;
-   text-shadow: 2px 2px 5px #ec2ec4;
-}
 
 .centered {
+  text-align: center;
   position: absolute;
-  top: 10%;
+  top: 7%;
+  left: 0%;
+  right: 0%;
+}
+    
+    .albumtitle {
+        top: 50%;
+    left: 50%;
+    position: absolute;
+    margin-top: -190px;
+    margin-left: -60px;
+    display: none;
+    }
+    
+        h3 {
+        font-size: 3.5vw;
+        color:#000000; 
+     font-family:'New Times Roman';
+    }
+    
+    
+    .button1 {
+	background-color:#ebe9ff;
+	border-radius:8px;
+	display:inline-block;
+	cursor:pointer;
+	color:#000000;
+  font-family:'HelveticaNeue', Helvetica, sans-serif;
+    font-weight: lighter;
+	font-size:14px;
+	padding:10px 84px 8px;
+	text-decoration:none;
+	filter: opacity(80%);
+	transition-duration: 0.4s;
+	letter-spacing: 1px;
+	
+	    top: 50%;
+    left: 50%;
+    position: absolute;
+    margin-top: -20px;
+    margin-left: -60px;
+    display:none;
+}
+.button1:hover {
+	background-color:#ebe9ff;
+		filter: opacity(50%);
+}
+.button1:active {
+	position:relative;
+	top:1px;
+}
+
+
+.button2 {
+	background-color:#ebe9ff;
+	border-radius:8px;
+	display:inline-block;
+	cursor:pointer;
+	color:#000000;
+  font-family: 'HelveticaNeue', Helvetica, sans-serif;
+  font-weight: lighter;
+	font-size:14px;
+	padding:10px 120px 8px;
+	text-decoration:none;
+	filter: opacity(80%);
+	transition-duration: 0.4s;
+	letter-spacing: 1px;
+	
+	    top: 50%;
+    left: 50%;
+    position: absolute;
+    margin-top: 35px;
+    margin-left: -60px;
+    display:none;
+}
+.button2:hover {
+	background-color:#ebe9ff;
+		filter: opacity(50%);
+}
+.button2:active {
+	position:relative;
+	top:60px;
+}
+
+
+
+
+ img.ghibli {
+       width: 200px;
+    height: 200px;
+ position: absolute;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-}
+  margin-top: -100px;
+  margin-left: -100px;
+  z-index:99;
+  }
+  
+  
+  
+  
+  
 
-.top-right {
-  position: absolute;
-  top: 6%;
-  right: 1.25%;
-  }
-  
-    img.youtube {
-  top: 17px;
-  right: 15px;
-position: absolute;
-z-index: 2;
-  }
-   
-  img.youtube:hover{
-   opacity: 0;   
-}
-      
- img.youtube2 {
-  top: 17px;
-  right: 15px;
-position: absolute;
-z-index:1
-  }
-  
-  img.soundcloud {
-  top: 47px;
-  right: 15px;
-  opacity: 1;
-position: absolute; 
-z-index: 2;
-  }
-  
-  img.soundcloud:hover{
-   opacity: 0;   
-}
-
- img.soundcloud2 {
-  top: 47px;
-  right: 15px;
-position: absolute;
-z-index:1
-  }
-  
-  img.instagram {
-  top: 87px;
-  right: 15px;
-  opacity: 1;
-position:   absolute; 
-  z-index: 2;
-  }
-  
-  img.instagram:hover{
-   opacity: 0;   
-}
-
- img.instagram2 {
-  top: 87px;
-  right: 15px;
-position: absolute;
-z-index:1
-  }
-  
-  img.facebook {
-  top: 127px;
-  right: 15px;
-  opacity: 1;
-position:   absolute; 
-   z-index: 2;
-  }
-  
-  img.facebook:hover{
-   opacity: 0;   
-}
-
- img.facebook2 {
-  top: 127px;
-  right: 15px;
-position: absolute;
-z-index:1
-  }  
-  
-  img.twitter {
-  top: 167px;
-  right: 15px;
-  opacity: 1;
-position:   absolute; 
-z-index: 2;
-  }
-  
-  img.twitter:hover{
-   opacity: 0;   
-}
-
- img.twitter2 {
-  top: 167px;
-  right: 15px;
-position: absolute;
-z-index:1
-  }  
-  
-  img.twitch {
-  top: 207px;
-  right: 15px;
-  opacity: 1;
-position:  absolute; 
-  z-index: 2;
-  }
-  
-  img.twitch:hover{
-   opacity: 0;   
-}
-
- img.twitch2 {
-  top: 207px;
-  right: 15px;
-position: absolute;
-z-index:1
-  }  
-  
   a.two {
-  color: #c6d5f3;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 12px;
-  font-weight: lighter;
-     text-shadow: 2px 2px 5px #4c60b6;
-}
-
-
-a.two:hover {
-  color: #f6f7f9;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 12px;
-  font-weight: lighter;
-     text-shadow: 2px 2px 5px #4c60b6;
-}
-
-  a.eight {
-  color: #9ebbf5;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 12px;
-  font-weight: lighter;
-     text-shadow: 2px 2px 5px #ec2ec4;
-}
-
-a.eight:hover {
-  color: #c6d5f3;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 12px;
-  font-weight: lighter;
-     text-shadow: 2px 2px 5px #ec2ec4;
-}
-
-a.six {
   color: #b5ffb5;
   text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 12px;
-  font-weight: lighter;
-  text-shadow: 2px 2px 5px #ec2ec4;}
+  font-family:'Arial';
+  font-size: 1.5vw;
+  font-weight: 100;
+}
 
-
-a.six:hover {
-  color: #e9ffe9;
+a.two:hover {
+  color: #ebe9ff;
   text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 12px;
-  font-weight: lighter;
-  text-shadow: 2px 2px 5px #ec2ec4;
+ font-family: 'Arial';
+  font-size: 1.5vw;
+  font-weight: 100;
+}
+    
+.socialmedia {
+  text-align: center;
+  position: absolute;
+  top: 13%;
+  left: 0%;
+  right: 0%;
+}
+
+.spotify {
+width:22px;
+height:22px;
+margin-right:30px;
+position: relative;
+display: inline-block;
+background: url("spotify.png") no-repeat;
+background-size: 22px;
+ z-index:99;
+
+box-shadow: 0px 0px -10px 10px rgba(0,0,0,0.75);
+}
+
+.spotify:hover {
+background: url("spotify2.png") no-repeat;
+background-size: 22px;
+}
+
+.applemusic {
+width:22px;
+height:22px;
+margin-right:30px;
+position: relative;
+display: inline-block;
+background: url("applemusic.png") no-repeat;
+background-size: 22px;
+ z-index:99;
+
+box-shadow: 0px 0px -10px 10px rgba(0,0,0,0.75);
+}
+
+.applemusic:hover {
+background: url("applemusic2.png") no-repeat;
+background-size: 22px;
 }
 
 
-div.about {
-margin-top:15em !important;
+.youtube {
+width:22px;
+height:22px;
+margin-right:30px;
+position: relative;
+display: inline-block;
+background: url("youtube.png") no-repeat;
+background-size: 22px;
+ z-index:99;
+
+box-shadow: 0px 0px -10px 10px rgba(0,0,0,0.75);
 }
 
-img.about {
-margin-top:0em;
-display: block;
-margin-left: auto;
-margin-right: auto
+.youtube:hover {
+background: url("youtube2.png") no-repeat;
+background-size: 22px;
 }
 
-p.about1 {
-font-size:16px; 
-color:#00ff00; 
-font-family:'Courier New',Arial; 
-font-weight: lighter;
- text-align: left;
- margin-left:30px;
- margin-top: 3em;
+.soundcloud {
+width:22px;
+height:22px;
+margin-right:30px;
+position: relative;
+display: inline-block;
+background: url("soundcloud.png") no-repeat;
+background-size: 22px;
+ z-index:99;
 }
 
-p.about2 {
-font-size:12px; 
-color:#00ff00; 
-font-family:'Courier New',Arial; 
-font-weight: lighter;
-text-align: left;
-line-height: 1.5;
- margin-left:30px;
-  margin-top: 3em;
+.soundcloud:hover {
+background: url("soundcloud2.png") no-repeat;
+background-size: 22px;
 }
 
-div.sweetdemon {
-margin-top:3em !important;
+.instagram {
+width:20px;
+height:20px;
+margin-right:30px;
+position: relative;
+display: inline-block;
+background: url("instagram.png") no-repeat;
+background-size: 20px;
+ z-index:99;
 }
 
-div.ghibli {
-margin-top: 3em !important;
+.instagram:hover {
+background: url("instagram2.png") no-repeat;
+background-size: 20px;
 }
 
-img.sweetdemon {
-border: 0.01em solid #00c5ab;
-box-shadow: 0em 0em 0.5em 0.001em #b71c1c;
-margin-top:0em;
-display: block;
-    margin-left: auto;
-    margin-right: auto
+.facebook {
+width:20px;
+height:20px;
+position: relative;
+display: inline-block;
+background: url("facebook.png") no-repeat;
+background-size: 20px;
+ z-index:99;
 }
 
-img.ghibli {
-border: 0.01em solid #00c5ab;
-box-shadow: 0em 0em 0.5em 0.001em #b71c1c;
-margin-top:0em;
-display: block;
-    margin-left: auto;
-    margin-right: auto
+.facebook:hover {
+background: url("facebook2.png") no-repeat;
+background-size: 20px;
 }
 
-img.releases {
-   overflow: hidden;
-   padding: 0em;
-   width: 100%;
-   margin-top: 11em;
-   }
-   
-.angel {
-display:none; 
-   overflow: hidden;
-   padding: 0px;
-   width: 100%;
-   margin-top:0em;
+.twitter {
+display:none;
 }
 
-.contact {
-margin-top: 3em;
+.twitch {
+display:none;
+}
+ 
+  
+  .streaming {
+ top: 3px;
+  right: 270px;
+position: fixed;
+z-index: 99;
+display:none;
 }
 
-.centered3 {
-margin-top:8em;
+.mobilebackground {
+background-image: linear-gradient(rgba(0, 0, 0, 2), rgba(0, 0, 0, 0.8)), url(mosaik.png);
+background-repeat: repeat;
 }
 
-div.music {
-margin-top:16em;
+hr {
+margin-left:30px;
+margin-right:30px;
+color: #00ff00;
+
 }
 
-.thanksyou {
-margin-top:8em;
+.parallax-contact {
+display:hidden;
 }
 
-
-h3 {
-font-size:16px; 
-color:#000000; 
-font-family:'Courier New',Arial; 
-font-weight: lighter;
-text-align: center;
-margin-top: 3em;
-margin-bottom: 2em;
+.parallax-press {
+display:hidden;
 }
 
-h4 {
-font-size:12px; 
-color:#000000; 
-font-family:'Courier New',Arial; 
-font-weight: lighter;
-text-align: center;
-line-height: 1.5;
-margin-top: 0em;
+.parallax-live {
+margin-top:20em;
+display:hidden;
 }
-
-h5 {
-font-size:16px; 
-color:#000000; 
-font-family:'Courier New',Arial; 
-font-weight: lighter;
-text-align: center;
-margin-top: 3em;
-margin-bottom: 2em;
-}
-
-h6 {
-font-size:12px; 
-color:#000000; 
-font-family:'Courier New',Arial; 
-font-weight: lighter;
-text-align: center;
-line-height: 1.5;
-margin-top: 0em;
-}
-
 
 .iframe-container{
   position: relative;
   width: 100%;
   padding-bottom: 50%; 
   height: 0;
-  margin-top: 3em;
 }
+
 .iframe-container iframe{
   position: absolute;
   top:0;
@@ -458,46 +384,30 @@ margin-top: 0em;
   height: 100%;
 }
 
-a.seven {
-  color: #b5ffb5;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 12px;
-  font-weight: lighter;
-  text-shadow: 2px 2px 5px #ec2ec4;
+.contact {
+margin-top: 0em !important;
 }
-
-a.seven:hover {
-  color: #e9ffe9;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 12px;
-  font-weight: lighter;
-  text-shadow: 2px 2px 5px #ec2ec4;
-}
-
-
 
 div.pressphotos {
-margin-top:12em;
-margin-bottom:1em;
 }
 
 div.pressphotos1 {
+margin-left:10%;
 font-size:16px; 
 color:#00FF00; 
 font-family:'Courier New',Arial; 
 font-weight: lighter;
-text-align: center;
-margin-bottom:1em;
+float:left;
 }
 
 div.pressphotos2 {
+margin-right:10%;
+text-align: right;
 font-size:12px; 
 color:#00ff00; 
 font-family:'Courier New',Arial; 
 font-weight: lighter;
-text-align: center;
+margin-bottom:1em;
 }
 
 
@@ -513,14 +423,159 @@ div.press {
 text-align: center;
 }
 
+
+.live{
+}
 .thanksyou {
-margin-top:12em;
+margin-top:0em;
 }
 
-.parallax {
-background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("gradient.jpg");
-height: 76em; 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  a.eight {
+  color: #00ff00;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #000000;
+  transition-duration: 0.2s;
 }
+
+a.eight:hover {
+  color: #b5ffb5;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #000000;
+}
+
+a.six {
+  color: #b5ffb5;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #ec2ec4;
+  transition-duration: 0.2s;
+}
+
+a.six:hover {
+  color: #e9ffe9;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #ec2ec4;
+}
+
+a.seven {
+  color: #b5ffb5;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #ec2ec4;
+  transition-duration: 0.2s;
+}
+
+a.seven:hover {
+  color: #e9ffe9;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #ec2ec4;
+}
+
+
+a.four {
+  color: #b5ffb5;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 14px;
+  font-weight: lighter;
+   text-shadow: 2px 2px 5px #ec2ec4;
+   transition-duration: 0.2s;
+}
+
+a.four:hover {
+  color: #e9ffe9;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 14px;
+  font-weight: lighter;
+   text-shadow: 2px 2px 5px #ec2ec4;
+}
+
+a.one {
+color:#00FF00;
+text-decoration:none;
+font-family: 'Courier New',Arial;
+font-size: 16px;
+font-weight: lighter;
+transition-duration: 0.2s;
+}
+
+a.one:hover {
+  color: #8e9cff;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 16px;
+  font-weight: lighter;
+   text-shadow: 0px 0px 5px red;
+}
+
+a.five {
+  color: #b5ffb5;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+  transition-duration: 0.2s;
+}
+
+a.five:hover {
+  color: #ebe9ff;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+}
+
+a.ten {
+color:#00FF00;
+font-family:'Courier New',Arial;
+font-weight: lighter;
+ text-decoration:none;
+font-size: 16px;
+transition-duration: 0.2s;
+}
+
+a.ten:hover {
+font-family:'Courier New',Arial;
+font-weight: lighter;
+ text-decoration:none;
+font-size: 16px;
+  color: #8e9cff;
+   text-shadow: 0px 0px 5px red;
+}
+
 
 </style>
 </head>
